# openai-hackathon-2025

./: .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
backend/: __init__.py  config.py  llm.py  main.py
backend/agents/: __init__.py  action_extractor.py  base.py  orchestrator.py  qa_agent.py  risk_analyst.py  summarizer.py
backend/document/: __init__.py  extractor.py
backend/routers/: chat.py  demo.py  documents.py  health.py  models.py  tools.py
backend/tools/: __init__.py  definitions.py  registry.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: test_model_access.py
