[project]
name = "openai-hackathon"
version = "0.1.0"
description = "DocAgent — Local-first AI document analyst powered by gpt-oss-20b"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "groq>=0.11.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
    "tiktoken>=0.7.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
